fix(menu): disable scroll on mobile

--- a/src/App.sass
+++ b/src/App.sass
@@ -73,6 +73,8 @@ h2, h3, h4, h5, h6
   justify-content: flex-end
 .flex-reverse
   flex-direction: row-reverse
+.overflow-hidden
+  overflow: hidden
 
 .smooth-scroll
   overflow: hidden
