--- a/src/components/Menu/Menu.sass
+++ b/src/components/Menu/Menu.sass
@@ -13,6 +13,7 @@
   text-align: center
   transform: translate3d(100%, 0, 0)
   transition: 0.3s all ease-in-out
+  touch-action: none
   .close-menu
     position: absolute
     width: 60px
